--- a/redis-test/style.css
+++ b/redis-test/style.css
@@ -1290,7 +1290,12 @@ input[type="checkbox"]:checked + span {
     }
 
     .slide-five picture {
-        width: 800px;
+        width: 850px;
+    }
+
+    .slide-five img {
+        width: 700px;
+        height: auto;
     }
 
     .slide-five p {
